<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AddFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/edit_fragment_btn_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:background="?attr/actionBarItemBackground"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/bot_o_de_fechar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/edit_fragment_btn_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/actionBarItemBackground"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/botao_de_excluir"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/edit_fragment_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/editar_cart_o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_btn_close"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_fragment_input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_edit_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_fragment_inner_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_fragment_input_telephone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/telefone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_fragment_inner_tel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_fragment_input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/e_mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_input_telephone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_fragment_inner_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_fragment_input_business"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/empresa"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_fragment_inner_business"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/edit_fragment_color_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_input_business"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cor_do_cart_o"
            android:textSize="16sp"
            android:layout_marginStart="12dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/edit_fragment_color_picker"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="#145DA0"
            app:background="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/edit_fragment_color_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_145da0"
                android:textColor="@color/white"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_fragment_edit_btn"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:text="@string/salvar"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_color_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
